Add comments for clarity in PPO implementation and training loop

--- a/PPO.ipynb
+++ b/PPO.ipynb
@@ -152,6 +152,7 @@
     "        self._buffer_size = buffer_size\n",
     "        self._device = device\n",
     "\n",
+    "    # add τ_t = (s_t, a_t, ln π_θ_old(a_t|s_t), r_t, d_t, V_φ_old(s_t))\n",
     "    def add(\n",
     "            self,\n",
     "            state: np.ndarray,\n",
@@ -171,6 +172,7 @@
     "        self._pos += 1\n",
     "\n",
     "    def compute_return_target(self, last_value, gamma, lamb):\n",
+    "        # FASE 2: GAE (Generalized Advantage Estimation)\n",
     "        self._gaes = torch.zeros((self._buffer_size)).to(self._device)\n",
     "\n",
     "        for t in reversed(range(self._buffer_size)):\n",
@@ -182,12 +184,18 @@
     "                next_value = self._state_value_predictions[t+1]\n",
     "                next_gae = self._gaes[t+1]\n",
     "\n",
+    "            # Fórmula 2.1: TD-Error\n",
+    "            # δ_t = r_t + γ·V(s_{t+1})·(1-d_t) - V(s_t)\n",
     "            delta_t = self._rewards[t] + gamma*next_value * \\\n",
     "                (1-self._done_flags[t]) - self._state_value_predictions[t]\n",
     "\n",
+    "            # Fórmula 2.2: GAE Recursiva\n",
+    "            # Â_t = δ_t + (γλ)·(1-d_t)·Â_{t+1}\n",
     "            gae = delta_t + gamma*lamb*(1-self._done_flags[t])*next_gae\n",
     "            self._gaes[t] = gae\n",
     "\n",
+    "        # Fórmula 2.3: Return Target (Objetivo de Valor)\n",
+    "        # R_t = Â_t + V(s_t)\n",
     "        self._return_targets = self._gaes + self._state_value_predictions\n",
     "\n",
     "    @property\n",
@@ -214,7 +222,7 @@
     "        }\n",
     "    \n",
     "    def reset(self):\n",
-    "        self._pos = 0"
+    "        self._pos = 0\n"
    ]
   },
   {
@@ -286,6 +294,8 @@
     "avg_rewards = []\n",
     "\n",
     "for iteration in range(NUM_ITERATIONS):\n",
+    "    # FASE 1: ROLLOUT (Generación de Trayectorias)\n",
+    "    # Recolectamos τ_t = (s_t, a_t, ln π_θ_old(a_t|s_t), r_t, d_t, V_φ_old(s_t))\n",
     "    state = last_state\n",
     "    for step in range(BUFFER_SIZE):\n",
     "        with torch.no_grad():\n",
@@ -301,10 +311,13 @@
     "            state = next_state\n",
     "            last_state = next_state\n",
     "\n",
+    "    # Bootstrap: V(s_{T+1})\n",
     "    with torch.no_grad():\n",
     "        next_state_value_prediction = agent.critic(torch.as_tensor(state, device=device))\n",
     "\n",
+    "    # FASE 2: GAE - Llamada al cálculo de ventajas y retornos\n",
     "    buffer.compute_return_target(next_state_value_prediction, gamma, gae_lamb)\n",
+    "    \n",
     "    train_loader = DataLoader(\n",
     "        buffer, \n",
     "        batch_size=BATCH_SIZE,\n",
@@ -313,6 +326,8 @@
     "    )\n",
     "    losses = []\n",
     "    entropies = []\n",
+    "    \n",
+    "    # FASE 3: OPTIMIZACIÓN PPO\n",
     "    for epoch in range(EPOCHS):\n",
     "        for batch in train_loader:\n",
     "            state = batch['state_buffer']\n",
@@ -320,26 +335,44 @@
     "            old_log_probs = batch['log_probabilities']\n",
     "            action = batch['action_buffer']\n",
     "\n",
+    "            # Re-evaluación: Obtener log_prob y entropy actuales\n",
     "            _, log_prob, entropy = agent.get_action_log_prob_entropy(state, action)\n",
     "\n",
+    "            # Fórmula 3.2: Normalización de Ventajas\n",
+    "            # Â_{t,norm} = (Â_t - μ_B(Â)) / (σ_B(Â) + ε_stab)\n",
     "            advatages_norm = (gaes - gaes.mean()) / (gaes.std() + epsilon)\n",
+    "            \n",
+    "            # Fórmula 3.3: Ratio de Probabilidad\n",
+    "            # r_t(θ) = π_θ(a_t|s_t) / π_θ_old(a_t|s_t) = exp(ln π_θ - ln π_θ_old)\n",
     "            probability_ratio = torch.exp(log_prob - old_log_probs)\n",
     "\n",
+    "            # Fórmula 3.4: Clipped Surrogate Loss\n",
+    "            # L^CLIP_t(θ) = min(r_t·Â, clip(r_t, 1-ε, 1+ε)·Â)\n",
     "            L_clip = torch.min(\n",
     "                probability_ratio*advatages_norm,\n",
     "                torch.clip(probability_ratio, 1 - clip_epsilon, 1 + clip_epsilon)*advatages_norm\n",
     "            )\n",
     "\n",
+    "            # Fórmula 3.5: Value Function Loss\n",
+    "            # L^VF_t(φ) = (1/2)·||V_φ(s_t) - R_t||²\n",
     "            return_targets = batch['return_targets']\n",
     "            current_value_pred = agent.critic(state).squeeze(-1)\n",
     "            L_VF = 1/2 * torch.abs(current_value_pred - return_targets)**2\n",
     "\n",
+    "            # Fórmula 3.7: Total Loss\n",
+    "            # L(θ,φ) = E[-L^CLIP + c1·L^VF - c2·S[π_θ]]\n",
+    "            # (S[π_θ] es la entropía - Fórmula 3.6)\n",
     "            loss = torch.mean(-L_clip + c1*L_VF - c2*entropy)\n",
     "\n",
     "            optimizer.zero_grad()\n",
     "            loss.backward()\n",
     "\n",
+    "            # FASE 4: Gradient Clipping\n",
+    "            # ||∇_Θ|| ≤ max_grad_norm\n",
     "            clip_grad_norm_(agent.parameters(), max_norm=max_norm_value)\n",
+    "            \n",
+    "            # FASE 4: Parameter Update\n",
+    "            # Θ ← Θ - η·∇_Θ L(Θ)\n",
     "            optimizer.step()\n",
     "\n",
     "            losses.append(loss.item())\n",
@@ -355,7 +388,7 @@
     "\n",
     "    print(f\"Iteration {iteration + 1}/{NUM_ITERATIONS}, Loss: {avg_loss:.4f}, Avg Entropy: {avg_entropy:.4f}, Avg Reward: {avg_reward:.4f}\")\n",
     "    buffer.reset()\n",
-    "        "
+    "        \n"
    ]
   },
   {
@@ -441,7 +474,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.11"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
