Add comments for clarity in PPO architecture and training process

--- a/PPO.ipynb
+++ b/PPO.ipynb
@@ -99,7 +99,10 @@
     "    def __init__(self, state_dim: int, action_dim: int, hidden_dim: int) -> None:\n",
     "        super().__init__()\n",
     "\n",
+    "        # FASE 0: Architecture Definition\n",
+    "        # Actor: π_θ(a_t|s_t): S → Δ(A)\n",
     "        self.actor = ActorNewtwork(state_dim, action_dim, hidden_dim)\n",
+    "        # Critic: V_φ(s_t): S → R\n",
     "        self.critic = CriticNetwork(state_dim, hidden_dim)\n",
     "\n",
     "    def get_action_and_log_prob(self, state: torch.Tensor) -> tuple[torch.Tensor, torch.Tensor]:\n",
@@ -114,9 +117,11 @@
     "        action_logits = self.actor(state)\n",
     "        action_distribution = Categorical(logits=action_logits)\n",
     "        action_log_probability = action_distribution.log_prob(action)\n",
+    "        # Fórmula 3.2.3: Entropy Bonus\n",
+    "        # S[π_θ](s_t) = -Σ π_θ(a|s_t) log π_θ(a|s_t)\n",
     "        entropy = action_distribution.entropy()\n",
     "\n",
-    "        return action, action_log_probability, entropy"
+    "        return action, action_log_probability, entropy\n"
    ]
   },
   {
@@ -128,6 +133,11 @@
    "source": [
     "import numpy as np\n",
     "\n",
+    "# Notation Key: Mathematical Sets\n",
+    "# S: State Space (espacio de observaciones)\n",
+    "# A: Action Space (espacio de acciones discretas)\n",
+    "# D: Dataset/Rollout Buffer (conjunto completo de transiciones recolectadas)\n",
+    "# B: Minibatch (subconjunto aleatorio de D para un paso de gradiente)\n",
     "\n",
     "class RolloutBuffer(Dataset):\n",
     "    def __init__(\n",
@@ -152,7 +162,7 @@
     "        self._buffer_size = buffer_size\n",
     "        self._device = device\n",
     "\n",
-    "    # add τ_t = (s_t, a_t, ln π_θ_old(a_t|s_t), r_t, d_t, V_φ_old(s_t))\n",
+    "    # FASE 1: Almacenar transición τ_t = (s_t, a_t, log π_θ_old(a_t|s_t), r_t, d_t, V_φ_old(s_t))\n",
     "    def add(\n",
     "            self,\n",
     "            state: np.ndarray,\n",
@@ -172,30 +182,30 @@
     "        self._pos += 1\n",
     "\n",
     "    def compute_return_target(self, last_value, gamma, lamb):\n",
-    "        # FASE 2: GAE (Generalized Advantage Estimation)\n",
+    "        # FASE 2: GAE (Generalized Advantage Estimation) - Backward Pass\n",
     "        self._gaes = torch.zeros((self._buffer_size)).to(self._device)\n",
     "\n",
     "        for t in reversed(range(self._buffer_size)):\n",
     "            is_last = t == self._buffer_size - 1\n",
     "            if is_last:\n",
-    "                next_value = last_value\n",
-    "                next_gae = 0\n",
+    "                next_value = last_value  # Bootstrap: V_φ_old(s_{T+1})\n",
+    "                next_gae = 0  # Inicialización: Â_{T+1} = 0\n",
     "            else:\n",
     "                next_value = self._state_value_predictions[t+1]\n",
     "                next_gae = self._gaes[t+1]\n",
     "\n",
-    "            # Fórmula 2.1: TD-Error\n",
-    "            # δ_t = r_t + γ·V(s_{t+1})·(1-d_t) - V(s_t)\n",
+    "            # Fórmula 2.1: TD Residual\n",
+    "            # δ_t = r_t + γ·V_φ_old(s_{t+1})·(1-d_t) - V_φ_old(s_t)\n",
     "            delta_t = self._rewards[t] + gamma*next_value * \\\n",
     "                (1-self._done_flags[t]) - self._state_value_predictions[t]\n",
     "\n",
-    "            # Fórmula 2.2: GAE Recursiva\n",
+    "            # Fórmula 2.2: GAE Recursion\n",
     "            # Â_t = δ_t + (γλ)·(1-d_t)·Â_{t+1}\n",
     "            gae = delta_t + gamma*lamb*(1-self._done_flags[t])*next_gae\n",
     "            self._gaes[t] = gae\n",
     "\n",
-    "        # Fórmula 2.3: Return Target (Objetivo de Valor)\n",
-    "        # R_t = Â_t + V(s_t)\n",
+    "        # Fórmula 2.3: Return Target\n",
+    "        # R_t = Â_t + V_φ_old(s_t)\n",
     "        self._return_targets = self._gaes + self._state_value_predictions\n",
     "\n",
     "    @property\n",
@@ -295,14 +305,16 @@
     "\n",
     "for iteration in range(NUM_ITERATIONS):\n",
     "    # FASE 1: ROLLOUT (Generación de Trayectorias)\n",
-    "    # Recolectamos τ_t = (s_t, a_t, ln π_θ_old(a_t|s_t), r_t, d_t, V_φ_old(s_t))\n",
+    "    # Recolectamos D = {τ_t}, donde τ_t = (s_t, a_t, log π_θ_old(a_t|s_t), r_t, d_t, V_φ_old(s_t))\n",
+    "    # Usamos π_θ_old (frozen snapshot) para generar las trayectorias\n",
     "    state = last_state\n",
     "    for step in range(BUFFER_SIZE):\n",
-    "        with torch.no_grad():\n",
+    "        with torch.no_grad():  # No gradientes: solo recolección de datos\n",
     "            action, action_log_probability = agent.get_action_and_log_prob(torch.as_tensor(state, device=device))\n",
     "            next_state, reward, terminated, truncated, _ = env.step(int(action.item()))\n",
     "            is_episode_done = terminated or truncated \n",
     "            state_value_prediction = agent.critic(torch.as_tensor(state, device=device))\n",
+    "            # Almacenar: (s_t, a_t, log π_θ_old, r_t, d_t, V_φ_old)\n",
     "            buffer.add(state, int(action), float(action_log_probability), float(reward), is_episode_done, float(state_value_prediction))\n",
     "        if is_episode_done:\n",
     "            state, _ = env.reset()\n",
@@ -311,67 +323,70 @@
     "            state = next_state\n",
     "            last_state = next_state\n",
     "\n",
-    "    # Bootstrap: V(s_{T+1})\n",
+    "    # Bootstrap: Obtener V_φ_old(s_{T+1}) para el último estado fuera del buffer\n",
     "    with torch.no_grad():\n",
     "        next_state_value_prediction = agent.critic(torch.as_tensor(state, device=device))\n",
     "\n",
-    "    # FASE 2: GAE - Llamada al cálculo de ventajas y retornos\n",
+    "    # FASE 2: GAE - Cálculo de ventajas y retornos (Backward Pass)\n",
     "    buffer.compute_return_target(next_state_value_prediction, gamma, gae_lamb)\n",
     "    \n",
+    "    # Preparar DataLoader: Dividir D en minibatches B\n",
     "    train_loader = DataLoader(\n",
     "        buffer, \n",
     "        batch_size=BATCH_SIZE,\n",
-    "        shuffle=True,\n",
+    "        shuffle=True,  # Romper correlación temporal\n",
     "        generator=torch.Generator(device=device)\n",
     "    )\n",
     "    losses = []\n",
     "    entropies = []\n",
     "    \n",
-    "    # FASE 3: OPTIMIZACIÓN PPO\n",
+    "    # FASE 3: OPTIMIZACIÓN PPO (K epochs sobre M minibatches)\n",
     "    for epoch in range(EPOCHS):\n",
-    "        for batch in train_loader:\n",
+    "        for batch in train_loader:  # Iterar sobre cada minibatch B ⊂ D\n",
     "            state = batch['state_buffer']\n",
     "            gaes: torch.Tensor = batch['gaes']\n",
-    "            old_log_probs = batch['log_probabilities']\n",
+    "            old_log_probs = batch['log_probabilities']  # log π_θ_old (constante)\n",
     "            action = batch['action_buffer']\n",
     "\n",
-    "            # Re-evaluación: Obtener log_prob y entropy actuales\n",
+    "            # Re-evaluación: Pasar estados por la red ACTUAL (π_θ, V_φ)\n",
     "            _, log_prob, entropy = agent.get_action_log_prob_entropy(state, action)\n",
     "\n",
-    "            # Fórmula 3.2: Normalización de Ventajas\n",
+    "            # Fórmula 3.1: Normalización de Ventajas (sobre el minibatch B)\n",
     "            # Â_{t,norm} = (Â_t - μ_B(Â)) / (σ_B(Â) + ε_stab)\n",
     "            advatages_norm = (gaes - gaes.mean()) / (gaes.std() + epsilon)\n",
     "            \n",
-    "            # Fórmula 3.3: Ratio de Probabilidad\n",
-    "            # r_t(θ) = π_θ(a_t|s_t) / π_θ_old(a_t|s_t) = exp(ln π_θ - ln π_θ_old)\n",
+    "            # Fórmula 3.2.1: Ratio de Probabilidad (Importance Sampling)\n",
+    "            # r_t(θ) = π_θ(a_t|s_t) / π_θ_old(a_t|s_t) = exp(log π_θ - log π_θ_old)\n",
+    "            # log_prob: tiene gradientes (red actual)\n",
+    "            # old_log_probs: sin gradientes (del buffer)\n",
     "            probability_ratio = torch.exp(log_prob - old_log_probs)\n",
     "\n",
-    "            # Fórmula 3.4: Clipped Surrogate Loss\n",
-    "            # L^CLIP_t(θ) = min(r_t·Â, clip(r_t, 1-ε, 1+ε)·Â)\n",
+    "            # Fórmula 3.2.2: Clipped Surrogate Objective\n",
+    "            # L^CLIP_t(θ) = min(r_t·Â_norm, clip(r_t, 1-ε, 1+ε)·Â_norm)\n",
     "            L_clip = torch.min(\n",
     "                probability_ratio*advatages_norm,\n",
     "                torch.clip(probability_ratio, 1 - clip_epsilon, 1 + clip_epsilon)*advatages_norm\n",
     "            )\n",
     "\n",
-    "            # Fórmula 3.5: Value Function Loss\n",
+    "            # Fórmula 3.3.1: Value Function Loss (MSE contra R_t)\n",
     "            # L^VF_t(φ) = (1/2)·||V_φ(s_t) - R_t||²\n",
     "            return_targets = batch['return_targets']\n",
     "            current_value_pred = agent.critic(state).squeeze(-1)\n",
     "            L_VF = 1/2 * torch.abs(current_value_pred - return_targets)**2\n",
     "\n",
-    "            # Fórmula 3.7: Total Loss\n",
-    "            # L(θ,φ) = E[-L^CLIP + c1·L^VF - c2·S[π_θ]]\n",
-    "            # (S[π_θ] es la entropía - Fórmula 3.6)\n",
+    "            # FASE 4: Total Loss (combinación de Actor y Critic)\n",
+    "            # L(θ,φ) = E[-L^CLIP - c2·S[π_θ] + c1·L^VF]\n",
+    "            # Invertimos signos: queremos maximizar CLIP y Entropy, minimizar VF\n",
     "            loss = torch.mean(-L_clip + c1*L_VF - c2*entropy)\n",
     "\n",
     "            optimizer.zero_grad()\n",
     "            loss.backward()\n",
     "\n",
-    "            # FASE 4: Gradient Clipping\n",
+    "            # FASE 4: Gradient Clipping (previene explosión de gradientes)\n",
     "            # ||∇_Θ|| ≤ max_grad_norm\n",
     "            clip_grad_norm_(agent.parameters(), max_norm=max_norm_value)\n",
     "            \n",
-    "            # FASE 4: Parameter Update\n",
+    "            # FASE 4: Parameter Update (Gradient Descent)\n",
     "            # Θ ← Θ - η·∇_Θ L(Θ)\n",
     "            optimizer.step()\n",
     "\n",
